# ai-projects

./: CMakeLists.txt  README.md
8-puzzle-solver/: .gitignore  CMakeLists.txt
8-puzzle-solver/include/models/: PuzzleBoard.h
8-puzzle-solver/include/ui/: Application.h  Button.h
8-puzzle-solver/src/: main.cpp
8-puzzle-solver/src/models/: PuzzleBoard.cpp
8-puzzle-solver/src/ui/: Button.cpp
8-queens-solver/: .gitignore  ALGORITMOS.md  benchmark.py  main.py  relatorio.md  requirements.txt
8-queens-solver/src/: board.py
8-queens-solver/src/algorithms/: genetic.py  hill_climbing.py  simulated_annealing.py
include/models/: PuzzleBoard.h  Solver.h
include/ui/: Application.h  Button.h
src/: main.cpp
src/models/: PuzzleBoard.cpp  Solver.cpp
src/ui/: Application.cpp  Button.cpp
